crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__affected_packages_reports_success_for_documentation_only_changes@affected_packages_reports_success_for_documentation_only_changes.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: content_text(&result)
---
{
  "action": "affected_packages",
  "evaluation": {
    "affectedPackageIds": [],
    "changedPaths": [
      "docs/readme.md"
    ],
    "changesetPaths": [],
    "comment": null,
    "coveredPackageIds": [],
    "enforce": false,
    "errors": [],
    "ignoredPaths": [],
    "labels": [
      "no-changeset-required"
    ],
    "matchedPaths": [],
    "matchedSkipLabels": [
      "no-changeset-required"
    ],
    "required": false,
    "status": "skipped",
    "summary": "changeset verification skipped because the change has an allowed label: no-changeset-required",
    "uncoveredPackageIds": []
  },
  "ok": true,
  "summary": "changeset verification skipped because the change has an allowed label: no-changeset-required"
}
