crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__change_reports_errors_for_unknown_package_ids@change_reports_errors_for_unknown_package_ids.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: content_text(&result)
---
{
  "action": "change",
  "error": "config error: change package reference `missing` did not match any discovered package",
  "ok": false,
  "root": "[ROOT]
  "summary": "config error: change package reference `missing` did not match any discovered package"
}
