crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__changeset@change_writes_markdown_changeset.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: contents
---
---
core: patch
---

# add test coverage
