crates/monochange/src/__tests__/snapshots/monochange__mcp__tests__diagnostics_reports_missing_requested_changesets@diagnostics_reports_missing_requested_changesets.snap
---
source: crates/monochange/src/__tests__/mcp_tests.rs
expression: content_text(&result)
---
{
  "action": "diagnostics",
  "error": "config error: requested changeset `missing.md` does not exist",
  "ok": false,
  "root": "[ROOT]
  "summary": "config error: requested changeset `missing.md` does not exist"
}
